[package]
name = "servo-embedding"
version = "0.1.0"
authors = ["Justin Michaud <justin@justinmichaud.com>"]

[dependencies]
libservo = { git = "https://github.com/servo/servo", rev = "c9ba16f9fbdf7f43cb19feedfaaa68c85bbcbe3b" }
glutin = "0.12.0"

[patch."https://github.com/servo/servo"]
libservo = { path = "../servo/components/servo" }